@@ -4,6 +4,8 @@
 
 - fixed `filestorage.rename()` method
 - debug mode skips all `.js` files in the root
+- extended `MiddlewareOptions` by adding `url` property
+- improved middleware functionality
 
 ========================
 0.0.49
